ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cricradio-web-svc
                port:
                  number: 3000
          
          - path: /cricradio-go
            pathType: Prefix
            backend:
              service:
                name: cricradio-go-svc
                port:
                  number: 9900
          

          - path: /kafka-rest
            pathType: Prefix
            backend:
              service:
                name: cricradio-kafka-rest-svc
                port:
                  number: 38082
